; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_inet_lro.c_lro_receive_skb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_inet_lro.c_lro_receive_skb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_lro_mgr = type { i32 }
%struct.sk_buff = type { i32 }

@LRO_F_NAPI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lro_receive_skb(%struct.net_lro_mgr* %0, %struct.sk_buff* %1, i8* %2) #0 {
  %4 = alloca %struct.net_lro_mgr*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i8*, align 8
  store %struct.net_lro_mgr* %0, %struct.net_lro_mgr** %4, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.net_lro_mgr*, %struct.net_lro_mgr** %4, align 8
  %8 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call i64 @__lro_proc_skb(%struct.net_lro_mgr* %7, %struct.sk_buff* %8, i32* null, i32 0, i8* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %26

12:                                               ; preds = %3
  %13 = load %struct.net_lro_mgr*, %struct.net_lro_mgr** %4, align 8
  %14 = getelementptr inbounds %struct.net_lro_mgr, %struct.net_lro_mgr* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @LRO_F_NAPI, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %12
  %20 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %21 = call i32 @netif_receive_skb(%struct.sk_buff* %20)
  br label %25

22:                                               ; preds = %12
  %23 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %24 = call i32 @netif_rx(%struct.sk_buff* %23)
  br label %25

25:                                               ; preds = %22, %19
  br label %26

26:                                               ; preds = %25, %3
  ret void
}

declare dso_local i64 @__lro_proc_skb(%struct.net_lro_mgr*, %struct.sk_buff*, i32*, i32, i8*) #1

declare dso_local i32 @netif_receive_skb(%struct.sk_buff*) #1

declare dso_local i32 @netif_rx(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
